[package]
name = "auction"
description = "An auction"
version = "0.0.1"
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/raphjaph/auction"
repository = "https://github.com/raphjaph/auction"
autotests = false
autobins = false

[dependencies]
anyhow = "1.0.95"
bdk_bitcoind_rpc = "0.17.1"
bdk_wallet = { version = "1.0.0", features = ["rusqlite"] }
bitcoin = { version = "0.32.5", features = ["rand", "serde"] }
clap = { version = "4.5.27", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
rusqlite = "0.31.0"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"


[[bin]]
name = "auction"
path = "src/bin/main.rs"

[lib]
name = "auction"
path = "src/lib.rs"
